Adding overlay loading window while making http calls.using font awesom icon.

--- a/AttachingITToDo.WebUI/ClientApp/src/app/home/home.component.html
+++ b/AttachingITToDo.WebUI/ClientApp/src/app/home/home.component.html
@@ -36,6 +36,7 @@
                        [enableFilter]="true"
                        [animateRows]="true"
                        rowSelection="multiple"
+                       [overlayLoadingTemplate]="overlayLoadingTemplate"
                        (cellValueChanged)="onCellValueChanged($event)"
                        (gridReady)="onGridReady($event)">
       </ag-grid-angular>
